--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infovis-project",
+  "name": "ivt-project",
   "productName": "IVT",
   "version": "0.0.1",
   "description": "Interactive Voronoi Tree",
